# autonomous_rover

maps/: room_map.pgm  room_map.yaml
src/auto_car_description/: CMakeLists.txt  package.xml  rviz.rviz  wasd_teleop.py
src/auto_car_description/launch/: display.launch.py  gazebo.launch.py  nav2.launch.py  slam_nav2.launch.py
src/auto_car_description/meshes/: back_left_wheel_link.STL  back_right_wheel_link.STL  front_left_wheel_link.STL  front_right_wheel_link.STL  lidar_link.STL
src/auto_car_description/rviz/: auto_car.rviz
src/auto_car_description/urdf/: auto_car.urdf
src/auto_car_description/worlds/: empty.sdf  l_shaped.sdf  multi_room.sdf  obstacle_room.sdf
