<?xml version="1.0"?>
<package format="3">
  <name>auto_car_description</name>
  <version>0.0.1</version>
  <description>URDF description for auto_car robot</description>
  <maintainer email="sam@todo.com">sam</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
